# Viewer

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  Viewer.code-workspace  appveyor.yml
assets/: flatc
assets/shaders/: Debug.frag  Debug.vert  NuklearUI.frag  NuklearUI.vert  Scene.frag  Scene.vert  SceneSkinned.vert  SceneSkinned8.vert  Skybox.frag  Skybox.vert  UScene.frag  UScene.vert  Viewer.cso  Viewer.cso.json  ViewerCSO.shp
assets/shaders/apemode/: Scene.frag  Skybox.frag
projects/Viewer.xcworkspace/: contents.xcworkspacedata
projects/Viewer/Viewer Shared/: Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal
projects/Viewer/Viewer Shared/ApemodePlatform/: AssetManager.cpp
projects/Viewer/Viewer iOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.mm  Info.plist  main.m
projects/Viewer/Viewer macOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.mm  Info.plist  main.m
projects/Viewer/Viewer macOS/Base.lproj/: Main.storyboard
projects/Viewer/Viewer.xcodeproj/: project.pbxproj
projects/Viewer/Viewer.xcodeproj/xcshareddata/xcschemes/: Viewer iOS.xcscheme
schemes/: cso.fbs
src/apemode/: AppBase.cpp  AppBase.h  AppState.cpp  AppState.h  AppSurfaceSdlVk.cpp  AppSurfaceSdlVk.h  ArrayUtils.h  CameraControllerInputBase.h  DebugRendererVk.h
src/apemode/deprecated/: AppBase.cpp  AppBase.h  AppSurface.h  AppSurfaceSdlGL.cpp
src/apemode/platform/: AppInput.cpp  AppInput.h  AppState.cpp  AppState.h  AppSurface.h  ArrayUtils.h  AssetManager.cpp  AssetManager.h  CityHash.cpp  CityHash.h  DefaultAppShellCommand.h  IAppShell.h  IAssetManager.cpp  IAssetManager.h  MathInc.h  Stopwatch.h
src/apemode/platform/amalgamated/: TaskScheduler.cpp
src/apemode/platform/memory/: MemoryManager.cpp  MemoryManager.h
src/apemode/platform/sdl2/: AppMainSdl.cpp  AppSurfaceCocoaSdl.mm  AppSurfaceSdl.cpp  AppSurfaceSdl.h  InputManagerSdl.cpp  InputManagerSdl.h
src/apemode/platform/shared/: AssetManager.cpp  AssetManager.h
src/apemode/sdl/: AppMainSdl.cpp  AppSurfaceSdlBase.cpp  AppSurfaceSdlBase.h  AppSurfaceSdlBaseCocoa.mm  InputSdl.cpp  NuklearSdlBase.cpp  NuklearSdlBase.h  StopwatchSdl.cpp
src/apemode/vk/: Buffer.Vulkan.h  BufferPools.Vulkan.cpp  BufferPools.Vulkan.h  CityHash.Vulkan.cpp  CityHash.Vulkan.h  DescriptorPool.Vulkan.cpp  DescriptorPool.Vulkan.h  GraphicsDevice.Vulkan.cpp  GraphicsDevice.Vulkan.h  GraphicsManager.Vulkan.cpp  GraphicsManager.Vulkan.h  Image.Vulkan.h  NativeHandles.Vulkan.h  Platform.Vulkan.h  QueuePools.Vulkan.cpp  QueuePools.Vulkan.h  ResultHandle.Vulkan.h  Swapchain.Vulkan.cpp  Swapchain.Vulkan.h  THandle.Vulkan.h  TInfoStruct.Vulkan.h  TOneTimeCmdBufferSubmit.Vulkan.h
src/apemode/vk_ext/: AppSurface.Vulkan.cpp  AppSurface.Vulkan.h  ImageLoader.Vulkan.cpp  ImageLoader.Vulkan.h  ImageUploader.Vulkan.cpp  ImageUploader.Vulkan.h  SamplerManager.Vulkan.cpp  SamplerManager.Vulkan.h  ShaderCompiler.Vulkan.cpp  ShaderCompiler.Vulkan.h
src/shaderc/: ShaderCompiler.Vulkan.cpp  ShaderCompiler.Vulkan.h  main.cpp
src/shared/: AppBase.cpp  AppBase.h  AppState.cpp  AppState.h  AppSurfaceBase.h  AppSurfaceSdlGL2.cpp  AppSurfaceSdlVk.cpp  AppSurfaceSdlVk.h  CameraControllerBase.h  CameraControllerInputMouseKeyboard.h  CameraControllerModelView.h  CityHash.h  DebugRendererVk.cpp  DebugRendererVk.h  MathInc.h  NuklearSdlVk.cpp  NuklearSdlVk.h  fbxvpch.h
src/shared/platform/: AssetManager.cpp  AssetManager.h  FileManager.cpp  FileReader.h  FileTracker.cpp  FileTracker.h  IAssetManager.cpp  IAssetManager.h
src/shared/platform/memory/: MemoryManager.cpp  MemoryManager.h  dlmalloc.cc
src/shared/sdl/: AppMainSdl.cpp  AppSurfaceSdlBase.cpp  AppSurfaceSdlBase.h  AppSurfaceSdlBaseCocoa.mm  InputSdl.cpp  NuklearSdlBase.cpp  NuklearSdlBase.h
src/shared/vk/: Buffer.Vulkan.h  Buffer.Vulkan.hpp  BufferPools.Vulkan.cpp  BufferPools.Vulkan.h  CityHash.Vulkan.cpp  CityHash.Vulkan.h  CommandQueue.Vulkan.cpp  CommandQueue.Vulkan.h  DescriptorPool.Vulkan.cpp  DescriptorPool.Vulkan.h  GraphicsDevice.Vulkan.cpp  GraphicsDevice.Vulkan.h  GraphicsManager.KnownExtensions.Vulkan.h  GraphicsManager.KnownLayers.Vulkan.h  GraphicsManager.Vulkan.cpp  GraphicsManager.Vulkan.h  Image.Vulkan.h  Image.Vulkan.hpp  NativeDispatchableHandles.Vulkan.h  NativeHandles.Vulkan.h  Platform.Vulkan.h  QueuePools.Vulkan.cpp  QueuePools.Vulkan.h  ResultHandle.Vulkan.h  Swapchain.Vulkan.cpp  Swapchain.Vulkan.h  TDispatchableHandle.Vulkan.h  THandle.Vulkan.h  TInfoStruct.Vulkan.h  TOneTimeCmdBufferSubmit.Vulkan.h
src/shared/vk_ext/: ImageLoader.Vulkan.cpp  ImageLoader.Vulkan.h  SamplerManager.Vulkan.cpp  SamplerManager.Vulkan.h  ShaderCompiler.Vulkan.cpp  ShaderCompiler.Vulkan.h
src/viewer/: App.cpp  App.h  AppBase.cpp  AppBase.h  AppMainSdl.cpp  AppState.cpp  AppState.h  AppSurfaceBase.h  AppSurfaceSdlBase.cpp  AppSurfaceSdlBase.h  AppSurfaceSdlVk.cpp  AppSurfaceSdlVk.h  Camera.h  CameraControllerBase.h  CameraControllerFreeLook.h  CameraControllerInputBase.h  CameraControllerInputMouseKeyboard.h  CameraControllerModelView.h  CameraControllerProjection.h  DebugRendererVk.h  FileTracker.cpp  FileTracker.h  ImageLoaderVk.cpp  MathInc.h  MathfuInc.h  NuklearRendererBase.cpp  NuklearRendererBase.h  NuklearSdlBase.cpp  NuklearSdlVk.cpp  NuklearSdlVk.h  SamplerManagerVk.cpp  Scene.cpp  Scene.h  SceneLoaderVk.h  ScenePrintPretty.cpp  SceneRendererBase.h  SceneRendererVk.cpp  SceneRendererVk.h  SkyboxRendererVk.cpp  SkyboxRendererVk.h  (+5 more)
src/viewer/deprecated/: NuklearSdlGL.cpp  NuklearSdlGL.h
src/viewer/vk/: BufferPools.Vulkan.cpp  DebugRendererVk.cpp  DebugRendererVk.h  DescriptorPool.Vulkan.h  NativeDispatchableHandles.Vulkan.h  NuklearRendererVk.cpp  NuklearRendererVk.h  Platform.Vulkan.h  QueuePools.Vulkan.cpp  SceneLoaderVk.cpp  SceneLoaderVk.h  SceneRendererVk.cpp  SceneRendererVk.h  SceneUploaderVk.cpp  SceneUploaderVk.h  SkyboxRendererVk.cpp  SkyboxRendererVk.h  Swapchain.Vulkan.cpp  TInfoStruct.Vulkan.h  ViewerShellVk.cpp  ViewerShellVk.h
utils/: ViewerCSO.json
(+4 files in other folders)
